# keel

./: .gitignore  .railwayignore  CHANGELOG.md  CLAUDE.md  Procfile  README.md  TODOS.md  manage.py  pyproject.toml  requirements.txt  startup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
changes.d/: README.md  ai-key-claim-middleware.consumer-note.md  ai-key-claim-self-heal.fixed.md  ai-key-multi-account.fixed.md  ai-key-prompt-link.fixed.md  ai-key-status-endpoint.added.md  ai-key-status-endpoint.fixed.md  ai-panel-encryption-prereq.consumer-note.md  ai-panel-encryption-unconfigured.fixed.md  canary-healthy-no-longer-trips-on-idle-apps-audi.fixed.md  changelog-fragments-scripts-release-py-develop-b.added.md  ci-run-keels-own-test-suite-on-its-own-prs.added.md  claude-md-release-rule-rewritten-to-fragments-on.changed.md  comms-resend-transport.changed.md  comms-resend-transport.consumer-note.md  foia-mixin-and-audit.added.md  foia-ready-appconfig.added.md  helm-inbox-tests-jsonresponse-body.fixed.md  invitation-cc-me-beta-ai.added.md  invitation-send-audit.added.md  keel-mentions-retry-failed-deliveries-cron-annot.added.md  keel-ops-console-cross-product-operational-conso.added.md  keel-testing-anon-sweep-sweeps-every-parameterle.added.md  keel-testing-config-base-dir-defaulted-to-the-lo.fixed.md  keel-testing-security-audit-stop-auto-fix-propos.fixed.md  local-ai-key.added.md  login-ai-key-hydration.added.md  nightly-harness-pointed-at-the-wrong-repos.fixed.md  nightly-notification-digest.fixed.md  notify-batch-digest.added.md  scripts-nightly-qa-sh-nightly-qa-only-sweep-of-a.added.md  scripts-nightly-sh-phase-3-now-dedupes-dashboard.fixed.md  scripts-nightly-sh-revived-it-resolved-paths-und.fixed.md  scripts-nightly-sh-the-clean-tree-guard-used-git.fixed.md  sync-venvs-check-verifies-real-importability.fixed.md  typography-removed-the-unused-poppins-google-fon.changed.md  ui-audit-asserts-the-v3-design-system.fixed.md  unknown-account-relay-guard.security.md
docs/: INCIDENT_RESPONSE.md  SECURITY.md
docs/design/: collaboration-panel-2026-05.md
docs/plans/: audit-notifications-review-2026-06-27.md  csp-nonce-migration.md  design-v3-migration.md
keel/: __init__.py
keel/accounts/: __init__.py  admin.py  apps.py  backends.py  db_router.py  forms.py  middleware.py  models.py  services.py  signals.py  storage.py  urls.py  views.py
keel/activity/: MIGRATION-NOTES.md  __init__.py  apps.py  dispatch.py  models.py  notifications.py  product_promotions.py  registry.py  services.py  signals.py  urls.py  verbs.py  views.py
keel/ai/: __init__.py  apps.py  urls.py  views.py
keel/calendar/: __init__.py  apps.py  ical.py  models.py  registry.py  service.py
keel/comms/: addresses.py  admin.py  apps.py  conf.py  export.py  mixins.py  models.py  registry.py  resend_client.py  routing.py  sanitize.py  search.py  services.py  urls.py  views.py
keel/compliance/: admin.py  apps.py  models.py
keel/core/: ai.py  ai_access.py  ai_key_refresh.py  apps.py  archive.py  audit.py  audit_signals.py  avatars.py  context_processors.py  decorators.py  demo.py  export.py  fleet.py  foia_export.py  foia_urls.py  middleware.py  migration_utils.py  mixins.py  models.py  notifications.py  search_views.py  sso.py  startup.py  utils.py  views.py  workflow.py
keel/feed/: __init__.py  activity_feed_example.py  audit_feed_example.py  client.py  views.py
keel/foia/: __init__.py  ai_review.py  apps.py  export.py  mixins.py  models.py  search.py  urls.py  validators.py  views.py  workflow.py
keel/mentions/: README.md  __init__.py  apps.py  beacon.py  checks.py  forms.py  helm_inbox.py  models.py  notification_types.py  notify.py  parser.py  urls.py  views.py  widgets.py
keel/notifications/: __init__.py  apps.py  digest.py  dispatch.py  models.py  product_types.py  registry.py  signals.py  urls.py  views.py
keel/oidc/: apps.py  validators.py  views.py
keel/ops/: __init__.py  apps.py  canary.py  urls.py  views.py
keel/periods/: admin.py  apps.py  models.py
keel/reporting/: admin.py  apps.py  models.py
keel_site/: asgi.py  dashboard.py  middleware.py  notifications_admin.py  settings.py  tools.py  urls.py  wsgi.py
reports/: nightly_20260714_122337.json  nightly_20260714_122616.json
scripts/: ai.docklabs.nightly-tests.plist  install-dev-hooks.sh  nightly-qa.sh  nightly.sh  release.py  security_audit.sh  sync_venvs.py  ui_audit.sh
tests/: conftest.py  settings.py  test_activity_feed_aggregator.py  test_activity_render_for_no_target.py  test_ai_access.py  test_ai_key_fetch_security.py  test_ai_key_refresh.py  test_ai_key_view.py  test_anon_sweep.py  test_archive.py  test_audit_aggregator.py  test_audit_client.py  test_audit_context_manager.py  test_audit_feed_view.py  test_audit_forms.py  test_audit_middleware.py  test_audit_permissions.py  test_audit_signal_gate.py  test_audit_tags.py  test_audit_view.py  test_auditlog_user_required.py  test_canary_audit_constraint.py  test_change_request_bulk_ingest.py  test_claim_row_workflow_transitions.py  test_collaboration_panel.py  test_comms_resend_client.py  test_comms_sanitize.py  test_cors_origin.py  test_encrypted_field.py  test_encryption.py  test_foia_audit_and_mixin.py  test_foia_ready_appconfig.py  test_helm_feed_per_product_key.py  test_helm_inbox_view.py  test_invitation_ai_flag.py  test_invitation_cc_and_content.py  test_invitation_existing_user.py  test_invitation_password.py  test_invitation_subscription_gate.py  test_layout_bell.py  (+41 more)
(+272 files in other folders)
