[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keel"
version = "0.20.2"
description = "Shared Django platform layer for DockLabs products"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Daniel O'Keefe"}]
dependencies = [
    "Django>=5.2",
    "django-oauth-toolkit>=2.4",
    "nh3>=0.2",  # parser-based HTML sanitizer (keel.comms)
]

[project.optional-dependencies]
sso = ["django-allauth>=65.0"]
foia = ["anthropic>=0.40"]
alerts = ["requests>=2.30"]  # for webhook notifications
sms = ["twilio>=9.0"]  # for SMS notifications
calendar = ["msal>=1.28"]  # for Microsoft Graph calendar integration

[tool.setuptools.packages.find]
include = ["keel*"]

[tool.setuptools.package-data]
"keel.core" = ["static/**/*", "templates/**/*", "templatetags/**/*", "management/**/*"]
"keel.accounts" = ["templates/**/*", "templatetags/**/*", "management/**/*"]
"keel.requests" = ["templates/**/*", "templatetags/**/*"]
"keel.notifications" = ["templates/**/*", "templatetags/**/*"]
"keel.search" = ["static/**/*", "templates/**/*"]
"keel.security" = ["ca_bundles/*.pem"]
