[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keel"
version = "0.33.2"
description = "Shared Django platform layer for DockLabs products"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Daniel O'Keefe"}]
dependencies = [
    "Django>=5.2",
    "django-oauth-toolkit>=2.4",
    "nh3>=0.2",  # parser-based HTML sanitizer (keel.comms)
    "Pillow>=10.0",  # avatar image processing (resize, EXIF strip, WebP encode)
]

[project.optional-dependencies]
sso = ["django-allauth>=65.0"]
avatars-s3 = ["django-storages[s3]>=1.14"]  # S3 avatar storage; unset KEEL_AVATAR_BUCKET falls back to local FS
foia = ["anthropic>=0.40"]
alerts = ["requests>=2.30"]  # for webhook notifications
sms = ["twilio>=9.0"]  # for SMS notifications
calendar = ["msal>=1.28"]  # for Microsoft Graph calendar integration
encryption = ["cryptography>=42"]  # for keel.security.encryption (data-at-rest KEK)

[tool.setuptools.packages.find]
include = ["keel*"]

[tool.setuptools.package-data]
"keel.core" = ["static/**/*", "templates/**/*", "templatetags/**/*", "management/**/*"]
"keel.accounts" = ["templates/**/*", "templatetags/**/*", "management/**/*"]
"keel.requests" = ["templates/**/*", "templatetags/**/*"]
"keel.notifications" = ["templates/**/*", "templatetags/**/*"]
"keel.search" = ["static/**/*", "templates/**/*"]
"keel.settings" = ["templates/**/*"]
"keel.security" = ["ca_bundles/*.pem"]
"keel.activity" = ["templates/**/*", "templatetags/**/*"]
"keel.comms" = ["templates/**/*"]
"keel.scheduling" = ["templates/**/*", "templatetags/**/*"]
"keel.ops" = ["templates/**/*"]
"keel.foia" = ["templates/**/*", "templatetags/**/*"]
"keel.periods" = ["templates/**/*"]
"keel.compliance" = ["templates/**/*"]
"keel.reporting" = ["templates/**/*"]
