[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keel"
version = "0.55.0"
description = "Shared Django platform layer for DockLabs products"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Daniel O'Keefe"}]
dependencies = [
    # No upper cap — keel tracks the current Django. (5.2 is the floor:
    # the oldest release keel is tested against.) Django 6.0 removed
    # ``CheckConstraint(check=...)``; keel now uses ``condition=`` everywhere
    # (source + migrations) and runs cleanly on it. When a future Django
    # major lands, test keel against it rather than re-adding a ceiling.
    "Django>=5.2",
    "django-oauth-toolkit>=2.4",
    "nh3>=0.3.5",  # parser-based HTML sanitizer (keel.comms)
    "Pillow>=10.0",  # avatar image processing (resize, EXIF strip, WebP encode)
]

[project.optional-dependencies]
sso = ["django-allauth>=65.16.1"]
avatars-s3 = ["django-storages[s3]>=1.14"]  # S3 avatar storage; unset KEEL_AVATAR_BUCKET falls back to local FS
foia = ["anthropic>=0.40"]
alerts = ["requests>=2.34.2"]  # for webhook notifications
sms = ["twilio>=9.0"]  # for SMS notifications
calendar = ["msal>=1.28"]  # for Microsoft Graph calendar integration
encryption = ["cryptography>=42"]  # for keel.security.encryption (data-at-rest KEK)

[tool.setuptools.packages.find]
include = ["keel*"]

[tool.setuptools.package-data]
"keel.core" = ["static/**/*", "templates/**/*", "templatetags/**/*", "management/**/*"]
"keel.accounts" = ["static/**/*", "templates/**/*", "templatetags/**/*", "management/**/*"]
"keel.requests" = ["templates/**/*", "templatetags/**/*"]
"keel.notifications" = ["templates/**/*", "templatetags/**/*"]
"keel.search" = ["static/**/*", "templates/**/*"]
"keel.settings" = ["templates/**/*"]
"keel.security" = ["ca_bundles/*.pem"]
"keel.activity" = ["templates/**/*", "templatetags/**/*"]
"keel.comms" = ["templates/**/*"]
"keel.scheduling" = ["templates/**/*", "templatetags/**/*"]
"keel.ops" = ["templates/**/*"]
"keel.foia" = ["templates/**/*", "templatetags/**/*"]
"keel.periods" = ["templates/**/*"]
"keel.compliance" = ["templates/**/*"]
"keel.reporting" = ["templates/**/*"]
"keel.mentions" = ["static/**/*", "templates/**/*", "management/**/*", "README.md"]
